created ingredients and instructions on each recipe pages

--- a/recipes/bananacake.html
+++ b/recipes/bananacake.html
@@ -1,24 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banana Cake </title>
-</head>
-<body>
-    <h1> Banana Cake </h1>
-    <p> Introduction to making Banana Cake </p>
-    <h2> Ingredients</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Banana Cake</title>
+  </head>
+  <body>
+    <h1>Banana Cake</h1>
+    <img
+      src=" https://hips.hearstapps.com/hmg-prod/images/banana-cake-lead-668d5778a02cb.jpg?crop=1xw:1xh;center,top"
+      alt="cake made with Bananas"
+      height="600"
+      width="700"
+    />
+    <p>
+      <em>Introduction to making Banana Cake </em>
+    </p>
+    <h2>Ingredients</h2>
     <ul>
-        <li>1 1/2 Cups of Milk </li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-
+      <li>1 1/2 Cups of Milk</li>
+      <li>Cooking spray</li>
+      <li>3/4 (1 1/2 sticks) butter, softened</li>
+      <li>1/2 cup granulated sugar</li>
+      <li>1/2 cup packed brown sugar</li>
+      <li>3 eggs</li>
+      <li>3 ripe bananas, mashed</li>
+      <li>3/4 cup sour cream</li>
+      <li>1 tsp. pure vanilla extract</li>
+      <li>3 cups all-purpose flour</li>
+      <li>1 Tbsp. cornstarch</li>
+      <li>1 tsp. baking soda</li>
+      <li>1/2 tsp. ground cinnamon</li>
+      <li>1/2 tsp. kosher salt</li>
+      <li>1 (8-oz.) block cream cheese, softened</li>
+      <li>1/2 cup (1 stick) butter, softened</li>
+      <li>1 tsp. pure vanilla extract</li>
+      <li>4 cups powdered sugar</li>
+      <li>1/4 cup heavy cream</li>
+      <li>1/2 cup walnuts, roughly chopped</li>
     </ul>
-    <br>
+    <h2>Instructions</h2>
+    <ol>
+      <li>
+        Preheat oven to 350° and line two 8" cake pans with parchment paper and
+        grease with cooking spray. In a large bowl, cream together butter and
+        sugars until smooth. Add eggs, one at a time, beating well after each
+        one, then add vanilla. Add bananas and sour cream and beat until smooth.
+      </li>
+      <li>
+        In a medium bowl, whisk together flour, cornstarch, baking soda,
+        cinnamon, and salt. Add dry ingredients to wet ingredients and beat
+        until just combined.
+      </li>
+      <li>
+        Divide evenly between prepared pans and bake until tops are slightly
+        golden and a toothpick inserted into the center comes out clean, 30 to
+        35 minutes.
+      </li>
+      <li>
+        Let cool 15 minutes, then invert onto cooling rack to cool completely.
+      </li>
+      <li>
+        In a large bowl with a hand mixer, beat together cream cheese and butter
+        until smooth. Add powdered sugar and beat again until smooth then add
+        vanilla and heavy cream and beat until a spreadable consistency.
+      </li>
+      <li>
+        Spread about half the frosting onto one layer, top with second layer,
+        then frost top. Garnish with banana and walnuts.
+      </li>
+    </ol>
+    <br />
     <a href="../index.html">Home</a>
-</body>
+  </body>
 </html>
