added description for all pages

--- a/recipes/bananacake.html
+++ b/recipes/bananacake.html
@@ -15,6 +15,9 @@
     />
     <p>
       <em>Introduction to making Banana Cake </em>
+      Banana cake is the ultimate comfort dessert, celebrated for its incredibly moist, dense crumb and deep, caramelized sweetness. Unlike its more modest cousin, banana bread, a true banana cake is refined with a lighter texture and a more delicate balance of spices like cinnamon or nutmeg. The magic of the recipe lies in the use of overripe, blackened bananas, which provide not only a potent aromatic punch but also natural sugars and moisture that keep the cake tender for days. It is a rustic yet soul-satisfying bake that transforms simple pantry staples into something deeply flavorful and aromatic.
+
+Often topped with a thick layer of tangy cream cheese frosting or a decadent brown butter glaze, banana cake bridges the gap between a casual afternoon snack and a sophisticated celebration dessert. The addition of buttermilk or sour cream in many recipes ensures a tangy counterpoint to the intense sweetness of the fruit, while the inclusion of toasted walnuts or pecans can add a much-needed crunch to the soft, "melt-in-your-mouth" interior. It is a testament to the idea that some of the best flavors in baking come from ingredients that look like they’ve seen better days.
     </p>
     <h2>Ingredients</h2>
     <ul>
